--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -18,7 +18,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           # Optional
-          LANGUAGE: Chinese
-          MODEL:
-          top_p: 1
-          temperature: 1
+          LANGUAGE: Korean
